samples/by-property/invalid/minimal-composition.bspl
../../tests/opt/minimal-composition.bspl